# crossy-road-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/models/characters/: chicken.glb
assets/models/objects/: boulder.glb  trees.glb
assets/models/obstacles/: boulder.glb  stump.glb
assets/models/obstacles/trees/: large.glb  medium.glb  small.glb  xl.glb
src/: camera.rs  constants.rs  dev.rs  events.rs  lifecycle.rs  main.rs  resources.rs  states.rs
src/player/: mod.rs
src/resources/: characters.rs  grounds.rs  mod.rs  obstacles.rs
src/utils/: mod.rs
src/world/: mod.rs
src/world/biomes/: crossy_valley.rs  default.rs  mod.rs
src/world/biomes/crossy_valley/: mod.rs
src/world/biomes/crossy_valley/regions/: forest.rs  mod.rs  spawn_point.rs
src/world/biomes/default/: mod.rs
src/world/biomes/default/regions/: meadow.rs  mod.rs
