[package]
name = "crossy-road-rs"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "Crossy Road, but using Rust"
readme = "README.md"
homepage = "https://github.com/Mixerou/crossy-road-rs"
repository = "https://github.com/Mixerou/crossy-road-rs"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy-inspector-egui = { version = "0.23.4", default-features = false, features = ["bevy_pbr"], optional = true }
bevy_rapier3d = { version = "0.25.0", default-features = false, features = ["dim3", "parallel", "simd-stable"] }
bevy_tweening = { version = "0.10.0", default-features = false }
dotenv = "0.15.0"
env_logger = "0.11.0"
log = "0.4.20"

[dependencies.bevy]
version = "0.13.1"
default-features = false
features = ["bevy_gltf", "bevy_pbr", "bevy_render", "bevy_winit", "multi-threaded", "png", "tonemapping_luts"]

[features]
debug = ["bevy/dynamic_linking", "bevy-inspector-egui", "bevy_rapier3d/debug-render-3d"]
